changes made in the navbar section

--- a/3D-mapping.html
+++ b/3D-mapping.html
@@ -180,13 +180,13 @@
           </div>
         </div>
 
-        <a href="#Explore" class="nav-link w-inline-block">
+        <a href="index.html#explore" class="nav-link w-inline-block">
           <div>What We Offer</div>
         </a>
-        <a href="#portfolio" class="nav-link w-inline-block">
+        <a href="index.html#portfolio" class="nav-link w-inline-block">
           <div>PORTFOLIO</div>
         </a>
-        <a href="#clients" class="nav-link w-inline-block">
+        <a href="index.html#clients" class="nav-link w-inline-block">
           <div>CLIENTS</div>
         </a>
         <a data-w-id="07f83e7a-2ea6-e495-5d5e-c2d37b7a20ae" href="#" class="button w-button">
@@ -338,7 +338,7 @@
 
 
   <div id="Explore" data-w-id="7534f677-933f-4546-7914-c262e6a1df90" class="section transform-perspective">
-    <h2>OUR SERVICES</h2>
+    <h2>What We Offer</h2>
     <div class="text-wrap">
       <p data-w-id="24e0d059-c1d3-2af2-9f9a-3680debc3757" style="opacity:0">At 3D MAPPING INDIA, we are in a unique
         position to provide all of our services through our in house team; this ensures the highest quality of
