--- a/Custom-Hot-Air-Balloon.html
+++ b/Custom-Hot-Air-Balloon.html
@@ -185,13 +185,13 @@
                     </div>
                 </div>
 
-                <a href="#Explore" class="nav-link w-inline-block">
+                <a href="index.html#explore" class="nav-link w-inline-block">
                     <div>What We Offer</div>
                 </a>
-                <a href="#portfolio" class="nav-link w-inline-block">
+                <a href="index.html#portfolio" class="nav-link w-inline-block">
                     <div>PORTFOLIO</div>
                 </a>
-                <a href="#clients" class="nav-link w-inline-block">
+                <a href="index.html#clients" class="nav-link w-inline-block">
                     <div>CLIENTS</div>
                 </a>
                 <a data-w-id="07f83e7a-2ea6-e495-5d5e-c2d37b7a20ae" href="#" class="button w-button">
