--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 					</div>
 				</div>
 
-				<a href="#Explore" class="nav-link w-inline-block">
+				<a href="#explore" class="nav-link w-inline-block">
 					<div>What We Offer</div>
 				</a>
 				<a href="#portfolio" class="nav-link w-inline-block">
@@ -282,17 +282,17 @@
 					</div>
 					<div class="slider-image _2"></div>
 				</div>
-				<div class="w-slide">
+				<!-- <div class="w-slide">
 					<div class="slider-image _3"></div>
-				</div>
+				</div> -->
 			</div>
-			<div class="left-arrow w-slider-arrow-left">
+			<!-- <div class="left-arrow w-slider-arrow-left">
 				<div class="w-icon-slider-left"></div>
 			</div>
 			<div class="right-arrow w-slider-arrow-right">
 				<div class="w-icon-slider-right"></div>
-			</div>
-			<div class="slide-nav w-slider-nav w-slider-nav-invert"></div>
+			</div> -->
+			<!-- <div class="slide-nav w-slider-nav w-slider-nav-invert"></div> -->
 		</div>
 	</div>
 
@@ -300,9 +300,9 @@
 	<!-- OUR SERVICES -->
 
 
-	<div id="Explore" data-w-id="7534f677-933f-4546-7914-c262e6a1df90" class="section transform-perspective">
+	<div id="explore" data-w-id="7534f677-933f-4546-7914-c262e6a1df90" class="section transform-perspective">
 		<div class="text-wrap">
-			<h2 data-w-id="24e0d059-c1d3-2af2-9f9a-3680debc3757" style="opacity:0">Our Services</h2>
+			<h2 data-w-id="24e0d059-c1d3-2af2-9f9a-3680debc3757" style="opacity:0">What We Offer</h2>
 		</div>
 		<div class="hero-div-wrap">
 			<div data-w-id="41b9d5ea-da89-5e0f-b0b0-ace8b216cd95" style="opacity:0" class="div-block hero"></div>
