--- a/space-advertisement-india.html
+++ b/space-advertisement-india.html
@@ -179,13 +179,13 @@
           </div>
         </div>
 
-        <a href="#Explore" class="nav-link w-inline-block">
+        <a href="index.html#explore" class="nav-link w-inline-block">
           <div>What We Offer</div>
         </a>
-        <a href="#portfolio" class="nav-link w-inline-block">
+        <a href="index.html#portfolio" class="nav-link w-inline-block">
           <div>PORTFOLIO</div>
         </a>
-        <a href="#clients" class="nav-link w-inline-block">
+        <a href="index.html#clients" class="nav-link w-inline-block">
           <div>CLIENTS</div>
         </a>
         <a data-w-id="07f83e7a-2ea6-e495-5d5e-c2d37b7a20ae" href="#" class="button w-button">
@@ -332,7 +332,7 @@
 
 
   <div id="Explore" data-w-id="7534f677-933f-4546-7914-c262e6a1df90" class="section transform-perspective">
-    <h2>OUR SERVICES</h2>
+    <h2>What We Offer</h2>
     <div class="text-wrap">
       <p data-w-id="24e0d059-c1d3-2af2-9f9a-3680debc3757" style="opacity:0">You want to inspire your audience? We will
         make a stratoflight as easy as possible and take care of all the details. And you will have the time to focus on
