--- a/3D-mapping.html
+++ b/3D-mapping.html
@@ -9,8 +9,7 @@
   <title>HarbourX | Brand Activation | Experiential Marketing | Retail Marketing | Influencer Marketing | Event
     Management | Sponsorships</title>
   <meta name="description" content="Marketing company in India, Mumbai, Delhi, Hyderabad, Banglore, Jaipur">
-  <meta name="keywords"
-    content="Brand Activation , Experiential Marketing , Retail Marketing , Influencer Marketing , Event Management , Brand Solutions, Merchandising, Drone Show" />
+  <meta name="keywords" content="3d mapping india, 3d mapping, Projection mapping" />
 
   <meta content="92 Rhys - Webflow HTML website template" property="og:title">
   <meta
